--- a/index.html
+++ b/index.html
@@ -86,6 +86,58 @@ nav a:hover {
     background: #0b5ed7;
 }
 
+	.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #1f4e8c;
+    padding: 10px 20px;
+}
+
+.nav-list {
+    display: flex;
+    list-style: none;
+    gap: 20px;
+}
+
+.nav-list li a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.menu-toggle {
+    display: none;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+}
+
+/* MOBILE VIEW */
+@media (max-width: 992px) {
+
+    .menu-toggle {
+        display: block;
+    }
+
+    .nav-list {
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background: #1f4e8c;
+        flex-direction: column;
+        align-items: center;
+        display: none;
+        padding: 15px 0;
+    }
+
+    .nav-list.active {
+        display: flex;
+    }
+
+}
+
 /* ================= CONTENT ================= */
 .container {
     padding: 30px;
@@ -1683,6 +1735,7 @@ html, body {
 
 </style>
 <script>
+	
 function generateStaffCards() {
     const staff = [
         ["Dr. Dathar Vasavi", "HOD Microbiology"],
@@ -1803,8 +1856,10 @@ function showAdmissionNotification() {
 </header>
 
 <!-- MENU -->
-<nav>
-
+<nav class="menu-toggle" id="mobile-menu">
+ <div class="menu-toggle" id="mobile-menu">
+            ☰
+        </div>
     <a onclick="showSection('home')">Home</a>
     <a onclick="showSection('about')">About</a>
 	  
@@ -1896,6 +1951,11 @@ function showAdmissionNotification() {
 </footer>
 
 <script>
+
+document.getElementById("mobile-menu").addEventListener("click", function() {
+    document.querySelector(".nav-list").classList.toggle("active");
+});
+
 function showSection(section) {
     const content = document.getElementById("content");
 
@@ -3795,3 +3855,4 @@ showSection('home');
 
 </body>
 </html>
+
