--- a/index.html
+++ b/index.html
@@ -1863,6 +1863,7 @@ function showAdmissionNotification() {
 
     <div class="menu-container">
         <div class="menu-toggle">☰</div>
+		   <ul class="nav-list">
     <a onclick="showSection('home')">Home</a>
     <a onclick="showSection('about')">About</a>
 	  
@@ -1939,6 +1940,7 @@ function showAdmissionNotification() {
 	 <a onclick="showSection('gallery')">Gallery</a>
 
     <a onclick="showSection('contact')">Contact Us</a>
+		   </ul>
 </nav>
 <div class="scroll-text">
     <span onclick="showAdmissionNotification()">
@@ -3858,6 +3860,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
