--- a/index.html
+++ b/index.html
@@ -151,7 +151,47 @@ nav a:hover {
     }
 }
 
+/* Mobile view */
+@media (max-width: 992px) {
 
+    .menu-toggle {
+        display: block;
+        font-size: 26px;
+        color: white;
+        cursor: pointer;
+    }
+
+    .nav-list {
+        display: none;  /* 🔴 Important */
+        position: absolute;
+        top: 60px;
+        right: 20px;
+        width: 220px;
+        background: #1f4e8c;
+        flex-direction: column;
+        border-radius: 6px;
+        box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+        padding: 10px 0;
+        z-index: 1000;
+    }
+
+    .nav-list li {
+        list-style: none;
+    }
+
+    .nav-list li a {
+        display: block;
+        padding: 10px 15px;
+        color: white;
+        text-decoration: none;
+    }
+
+    /* Show only when hovering hamburger */
+    .menu-toggle:hover + .nav-list,
+    .nav-list:hover {
+        display: flex;
+    }
+}
 /* ================= CONTENT ================= */
 .container {
     padding: 30px;
@@ -3876,6 +3916,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
