--- a/index.html
+++ b/index.html
@@ -1746,6 +1746,7 @@ nav a:hover {
     font-weight: bold;
 }
 	/* Desktop view */
+/* Desktop view */
 @media (min-width: 993px) {
     .nav-list {
         display: flex;
@@ -1756,6 +1757,7 @@ nav a:hover {
         display: none;
     }
 }
+
 @media (max-width: 768px) {
 
     nav ul {
@@ -3916,6 +3918,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
