--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ header {
 .logo {
     height: 75px;
     width: auto;
+	color:white;
 }
 
 .college-text h1 {
@@ -1924,7 +1925,7 @@ function showAdmissionNotification() {
 
 <!-- MENU -->
 <nav class="navbar">
-    <div class="logo">TGSWRDCW</div>
+    <div class="logo">RDC MBNR</div>
 
     <div class="menu-container">
         <div class="menu-toggle">☰</div>
@@ -3918,6 +3919,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
