--- a/index.html
+++ b/index.html
@@ -1838,7 +1838,9 @@ html, body {
 
 </style>
 <script>
-	
+	document.addEventListener("DOMContentLoaded", function() {
+    showSection('home');
+});
 function generateStaffCards() {
     const staff = [
         ["Dr. Dathar Vasavi", "HOD Microbiology"],
@@ -3954,6 +3956,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
