--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@ nav a:hover {
 .nav-list > li {
     position: relative;
 }
-
+.nav-list > li > a:hover {
+    background: transparent;
+    color: #ffd700; /* Gold highlight */
+}
 .nav-list a {
     color: white;
     text-decoration: none;
@@ -3956,6 +3959,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
