--- a/index.html
+++ b/index.html
@@ -143,7 +143,16 @@ nav a:hover {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-  
+  .dropdown-content a {
+    background: #1f4e8c;
+    color: white;
+    display: block;
+    padding: 10px;
+}
+
+.dropdown-content a:hover {
+    background: #163a6b;
+}
     .menu-toggle {
         display: block;
     }
@@ -3959,6 +3968,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
