--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ nav a:hover {
     position: relative;
 }
 .nav-list > li > a:hover {
-    background: transparent;
+    /*background: transparent;*/
+	 background:#0b5ed7;
     color: #ffd700; /* Gold highlight */
 }
 .nav-list a {
@@ -3968,6 +3969,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
