--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ nav a:hover {
 .nav-list > li > a:hover {
     /*background: transparent;*/
 	 background:#0b5ed7;
-    color: #ffd700; /* Gold highlight */
+    color:#0b5ed7; /* Gold highlight */
 }
 .nav-list a {
     color: white;
@@ -3969,6 +3969,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
