--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ nav a:hover {
     .nav-list li a {
         display: block;
         padding: 10px 15px;
-        color: white;
+        color: black;
         text-decoration: none;
     }
 
@@ -3969,6 +3969,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
