--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@ nav a:hover {
     position: relative;
 }
 .nav-list > li > a:hover {
-    /*background: transparent;*/
-	 background:#0b5ed7;
-    color:#0b5ed7; /* Gold highlight */
+    background: transparent;
+    color: #ffd700; /* Gold highlight */
 }
 .nav-list a {
     color: white;
@@ -144,16 +143,7 @@ nav a:hover {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-  .dropdown-content a {
-    background: #1f4e8c;
-    color: white;
-    display: block;
-    padding: 10px;
-}
-
-.dropdown-content a:hover {
-    background: #163a6b;
-}
+  
     .menu-toggle {
         display: block;
     }
@@ -196,7 +186,7 @@ nav a:hover {
     .nav-list li a {
         display: block;
         padding: 10px 15px;
-        color: black;
+        color: white;
         text-decoration: none;
     }
 
@@ -3969,11 +3959,6 @@ showSection('home');
 
 </body>
 </html>
-
-
-
-
-
 
 
 
