--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@ nav a:hover {
     position: relative;
 }
 .nav-list > li > a:hover {
-    background: transparent;
-    color: #ffd700; /* Gold highlight */
+    /*background: transparent;*/
+	 background:#0b5ed7;
+    color:#0b5ed7; /* Gold highlight */
 }
 .nav-list a {
     color: white;
@@ -143,7 +144,16 @@ nav a:hover {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-  
+  .dropdown-content a {
+    background: #1f4e8c;
+    color: white;
+    display: block;
+    padding: 10px;
+}
+
+.dropdown-content a:hover {
+    background: #163a6b;
+}
     .menu-toggle {
         display: block;
     }
@@ -3959,6 +3969,9 @@ showSection('home');
 
 </body>
 </html>
+
+
+
 
 
 
