--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ nav a {
 }
 
 nav a:hover {
-    background: #0b5ed7;
+    background: #184a99
 }
 
 .navbar {
@@ -152,7 +152,7 @@ nav a:hover {
 }
 
 .dropdown-content a:hover {
-    background: #163a6b;
+    background: #184a99;
 }
     .menu-toggle {
         display: block;
@@ -3969,6 +3969,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
