--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ nav a {
 }
 
 nav a:hover {
-    background: #184a99
+    background: #0b5ed7;
 }
 
 .navbar {
@@ -152,7 +152,7 @@ nav a:hover {
 }
 
 .dropdown-content a:hover {
-    background: #184a99;
+    background: #163a6b;
 }
     .menu-toggle {
         display: block;
@@ -624,7 +624,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #0b5ed7;
+    background-color: #184a99
 }
 
 /* ===== DROPDOWN ===== */
@@ -653,7 +653,7 @@ nav a:hover {
 }
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1;
+    background-color: #184a99;
 }
 
 /* Show only on hover */
@@ -3969,8 +3969,6 @@ showSection('home');
 
 </body>
 </html>
-
-
 
 
 
