--- a/index.html
+++ b/index.html
@@ -1853,6 +1853,7 @@ html, body {
 <script>
 	document.addEventListener("DOMContentLoaded", function() {
     showSection('home');
+		 showSlides();
 });
 function generateStaffCards() {
     const staff = [
@@ -3969,6 +3970,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
