--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@ nav a:hover {
     position: relative;
 }
 .nav-list > li > a:hover {
-    /*background: transparent;*/
-	 background:#0b5ed7;
+  background: transparent;
+	/* background:#0b5ed7;*/
     color:#0b5ed7; /* Gold highlight */
 }
 .nav-list a {
@@ -3974,6 +3974,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
