--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@ nav a:hover {
     display: block;
 }
   .dropdown-content a {
-    background: #1f4e8c;
+    /*background: #1f4e8c;*/
+	 background: white
     color: white;
     display: block;
     padding: 10px;
@@ -3974,6 +3975,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
