--- a/index.html
+++ b/index.html
@@ -145,15 +145,16 @@ nav a:hover {
     display: block;
 }
   .dropdown-content a {
-    /*background: #1f4e8c;*/
-	 background: white
+    background: #1f4e8c;
+	 /*background: white*/
     color: white;
     display: block;
     padding: 10px;
 }
 
 .dropdown-content a:hover {
-    background: #163a6b;
+    background:white
+	  /*background: #163a6b;*/
 }
     .menu-toggle {
         display: block;
@@ -3975,6 +3976,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
