--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@ h2 {
 }
 
 /* ================= SLIDER ================= */
+/* ================= SLIDER ================= */
 .slider {
     position: relative;
     width: 100%;
@@ -3976,6 +3977,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
