--- a/index.html
+++ b/index.html
@@ -252,7 +252,9 @@ h2 {
     height: 100%;
     object-fit: cover;
 }
-
+.slide:first-child {
+   display: block;
+}
 /* CAPTION */
 .caption {
     position: absolute;
@@ -3977,6 +3979,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
