--- a/index.html
+++ b/index.html
@@ -2132,11 +2132,11 @@ function showSection(section) {
                 <img src="rep.jpeg">
                 <div class="caption">Padmavathi Participated in Republic Day Parade </div>
             </div>
-			<div class="slide active">
+			<div class="slide">
                 <img src="home.jpeg">
                 <div class="caption">Quiz First prize at BRR college</div>
             </div>
-				<div class="slide active">
+				<div class="slide">
                 <img src="images/yoga.png">
                 <div class="caption">Yoga</div>
             </div>
@@ -3976,6 +3976,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
