--- a/index.html
+++ b/index.html
@@ -3959,16 +3959,24 @@ else {
 
 /* AUTO SLIDER */
 let slideIndex = 0;
+let sliderInterval;
+
 function startSlider() {
     const slides = document.querySelectorAll(".slide");
     if (!slides.length) return;
 
-    slides.forEach(slide => slide.classList.remove("active"));
-    slideIndex = (slideIndex + 1) % slides.length;
-    slides[slideIndex].classList.add("active");
+    sliderInterval = setInterval(() => {
+        slides.forEach(slide => slide.classList.remove("active"));
 
-    setTimeout(startSlider, 3000);
+        slideIndex++;
+        if (slideIndex >= slides.length) {
+            slideIndex = 0;
+        }
+
+        slides[slideIndex].classList.add("active");
+    }, 3000);
 }
+
 
 showSection('home');
 
@@ -3976,6 +3984,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
