--- a/index.html
+++ b/index.html
@@ -2119,24 +2119,24 @@ function showSection(section) {
                 <img src="i1.png">
                 <div class="caption">College Campus View</div>
             </div>
-			 <div class="slide">
+			 <div class="slide active">
                 <img src="h4.jpeg">
                 <div class="caption">P. Himabindu Receiving Gold Medal</div>
             </div>
          
-            <div class="slide">
+            <div class="slide active">
                 <img src="h6.jpeg">
                 <div class="caption">Gold Medal at Shooting Ball Nationals </div>
             </div>
-             <div class="slide">
+             <div class="slide active">
                 <img src="rep.jpeg">
                 <div class="caption">Padmavathi Participated in Republic Day Parade </div>
             </div>
-			<div class="slide">
+			<div class="slide active">
                 <img src="home.jpeg">
                 <div class="caption">Quiz First prize at BRR college</div>
             </div>
-				<div class="slide">
+				<div class="slide active">
                 <img src="images/yoga.png">
                 <div class="caption">Yoga</div>
             </div>
@@ -3984,6 +3984,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
