--- a/index.html
+++ b/index.html
@@ -2128,15 +2128,15 @@ function showSection(section) {
                 <img src="h6.jpeg">
                 <div class="caption">Gold Medal at Shooting Ball Nationals </div>
             </div>
-             <div class="slide active">
+             <div class="slide">
                 <img src="rep.jpeg">
                 <div class="caption">Padmavathi Participated in Republic Day Parade </div>
             </div>
-			<div class="slide active">
+			<div class="slide">
                 <img src="home.jpeg">
                 <div class="caption">Quiz First prize at BRR college</div>
             </div>
-				<div class="slide active">
+				<div class="slide">
                 <img src="images/yoga.png">
                 <div class="caption">Yoga</div>
             </div>
@@ -3984,6 +3984,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
