--- a/index.html
+++ b/index.html
@@ -2115,16 +2115,16 @@ function showSection(section) {
 
     
  <div class="slider">
-            <div class="slide active">
+            <div class="slide">
                 <img src="i1.png">
                 <div class="caption">College Campus View</div>
             </div>
-			 <div class="slide active">
+			 <div class="slide">
                 <img src="h4.jpeg">
                 <div class="caption">P. Himabindu Receiving Gold Medal</div>
             </div>
          
-            <div class="slide active">
+            <div class="slide">
                 <img src="h6.jpeg">
                 <div class="caption">Gold Medal at Shooting Ball Nationals </div>
             </div>
@@ -3984,6 +3984,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
