--- a/index.html
+++ b/index.html
@@ -224,7 +224,71 @@ h2 {
 }
 
 /* ================= SLIDER ================= */
-.slider {
+	 .slider {
+            position: relative;
+            width: 100%;
+            max-width: 900px;
+            height: 340px;
+            margin: 20px auto;
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+        .slider figure {
+            position: relative;
+            width: 600%; /* 6 slides */
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            animation: slide 30s infinite; /* Adjust speed: total time / 5s per slide */
+            left: 0;
+        }
+        .slider figure:hover {
+            animation-play-state: paused;
+        }
+        .slide {
+            width: 16.666%; /* 100%/6 */
+            height: 100%;
+            float: left;
+            position: relative;
+        }
+        .slide img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .caption {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0,0,0,0.7);
+            color: white;
+            padding: 15px;
+            text-align: center;
+            font-size: 18px;
+            font-weight: bold;
+        }
+        @keyframes slide {
+            0% { left: 0%; }
+            16% { left: 0%; }
+            17% { left: -100%; }
+            33% { left: -100%; }
+            34% { left: -200%; }
+            50% { left: -200%; }
+            51% { left: -300%; }
+            67% { left: -300%; }
+            68% { left: -400%; }
+            84% { left: -400%; }
+            85% { left: -500%; }
+            99% { left: -500%; }
+            100% { left: 0%; }
+        }
+        @media (max-width: 768px) {
+            .slider { height: 250px; }
+            .caption { font-size: 14px; padding: 10px; }
+        }
+/*.slider {
     position: relative;
     width: 100%;
     max-width: 900px;
@@ -252,7 +316,7 @@ h2 {
     object-fit: cover;
 }
 
-/* CAPTION */
+
 .caption {
     position: absolute;
     bottom: 0;
@@ -263,7 +327,7 @@ h2 {
     text-align: center;
     font-size: 16px;
 }
-
+*/
 /* ================= VIDEO ================= */
 .video-section {
     margin-top: 30px;
@@ -3984,6 +4048,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
