--- a/index.html
+++ b/index.html
@@ -224,70 +224,65 @@ h2 {
 }
 
 /* ================= SLIDER ================= */
-	 .slider {
-            position: relative;
-            width: 100%;
-            max-width: 900px;
-            height: 340px;
-            margin: 20px auto;
-            overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-        }
-        .slider figure {
-            position: relative;
-            width: 600%; /* 6 slides */
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            animation: slide 30s infinite; /* Adjust speed: total time / 5s per slide */
-            left: 0;
-        }
-        .slider figure:hover {
-            animation-play-state: paused;
-        }
-        .slide {
-            width: 16.666%; /* 100%/6 */
-            height: 100%;
-            float: left;
-            position: relative;
-        }
-        .slide img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        .caption {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0,0,0,0.7);
-            color: white;
-            padding: 15px;
-            text-align: center;
-            font-size: 18px;
-            font-weight: bold;
-        }
-        @keyframes slide {
-            0% { left: 0%; }
-            16% { left: 0%; }
-            17% { left: -100%; }
-            33% { left: -100%; }
-            34% { left: -200%; }
-            50% { left: -200%; }
-            51% { left: -300%; }
-            67% { left: -300%; }
-            68% { left: -400%; }
-            84% { left: -400%; }
-            85% { left: -500%; }
-            99% { left: -500%; }
-            100% { left: 0%; }
-        }
-        @media (max-width: 768px) {
-            .slider { height: 250px; }
-            .caption { font-size: 14px; padding: 10px; }
-        }
+	.slider {
+    position: relative;
+    width: 100%;
+    max-width: 900px;
+    height: 340px;
+    margin: 20px auto;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    animation: autoSlide 24s infinite; /* 6 slides × 4s each = 24s total */
+}
+
+.slide.active {
+    opacity: 1;
+    animation-play-state: paused; /* Pause when manually active */
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* CAPTION */
+.caption {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0,0,0,0.6);
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-size: 16px;
+}
+
+/* AUTO-SLIDE ANIMATION */
+@keyframes autoSlide {
+    0%, 14% { opacity: 0; }      /* Slide 1 hidden */
+    16%, 28% { opacity: 1; }     /* Slide 1 visible (Campus View) */
+    30%, 44% { opacity: 0; }     /* Slide 2 hidden */
+    46%, 58% { opacity: 1; }     /* Slide 2 visible (Gold Medal) */
+    60%, 74% { opacity: 0; }     /* Slide 3 hidden */
+    76%, 88% { opacity: 1; }     /* Slide 3 visible (Shooting) */
+    90%, 99% { opacity: 0; }     /* Slide 4-6 hidden */
+    100% { opacity: 0; }         /* Reset */
+}
+
+/* RESPONSIVE */
+@media (max-width: 768px) {
+    .slider { height: 250px; }
+    .caption { font-size: 14px; }
+}
 /*.slider {
     position: relative;
     width: 100%;
@@ -4048,6 +4043,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
