--- a/index.html
+++ b/index.html
@@ -2115,7 +2115,7 @@ function showSection(section) {
 
     
  <div class="slider">
-            <div class="slide">
+            <div class="slide active">
                 <img src="i1.png">
                 <div class="caption">College Campus View</div>
             </div>
@@ -3984,6 +3984,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
