--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@ h2 {
 }
 
 /* ================= SLIDER ================= */
+/* ===== SLIDER ===== */
+
 .slider {
     position: relative;
     width: 100%;
-    max-width: 900px;
-    height: 340px;
-    margin: 20px auto;
+    max-width: 100%;
+    height: 450px;
     overflow: hidden;
-    border-radius: 10px;
 }
 
 .slide {
@@ -252,16 +252,41 @@ h2 {
     object-fit: cover;
 }
 
-
+/* Caption */
 .caption {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background: rgba(0,0,0,0.6);
-    color: white;
-    padding: 10px;
+    padding: 12px;
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
     text-align: center;
-    font-size: 16px;
+    font-size: 18px;
+}
+/* ===== DOTS ===== */
+
+.dots {
+    position: absolute;
+    bottom: 15px;
+    width: 100%;
+    text-align: center;
+}
+
+.dots span {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    margin: 5px;
+    background: white;
+    border-radius: 50%;
+    cursor: pointer;
+    opacity: 0.5;
+    transition: 0.3s;
+}
+
+.dots span.active-dot {
+    opacity: 1;
+    background: #ffcc00;
 }
 
 /* ================= VIDEO ================= */
@@ -2141,7 +2166,8 @@ function showSection(section) {
                 <div class="caption">Yoga</div>
             </div>
             </div>
-        </div>
+			<div class="dots"></div>
+ 
 
         <!--<h2>TGSWRDC MBNR at a Glance</h2>
         <div class="video-section">
@@ -2251,10 +2277,10 @@ function showSection(section) {
 </section>
         `;
 
-     document.addEventListener("DOMContentLoaded", function () {
+    /* document.addEventListener("DOMContentLoaded", function () {
     showSection('home');
     startSlider();
-});
+});*/
 
     }
 /*else if (section === "StudentAmenities") {
@@ -3958,25 +3984,23 @@ else {
 }
 document.addEventListener("DOMContentLoaded", function () {
 
-    let slideIndex = 0;
+    let currentSlide = 0;
     const slides = document.querySelectorAll(".slide");
 
-    if (!slides.length) return;
-
-    function startSlider(index) {
+    function showSlide(index) {
         slides.forEach(slide => slide.classList.remove("active"));
         slides[index].classList.add("active");
     }
 
     function nextSlide() {
-        slideIndex++;
-        if (slideIndex >= slides.length) {
-            slideIndex = 0;
+        currentSlide++;
+        if (currentSlide >= slides.length) {
+            currentSlide = 0;
         }
-        startSlider(slideIndex);
+        showSlide(currentSlide);
     }
 
-    // Start automatic slider
+    // Start auto slider
     setInterval(nextSlide, 3000);
 
 });
@@ -4007,6 +4031,7 @@ showSection('home');*/
 
 </body>
 </html>
+
 
 
 
