--- a/index.html
+++ b/index.html
@@ -2167,7 +2167,7 @@ function showSection(section) {
             </div>
             </div>
 			<div class="dots"></div>
- 
+ </div>
 
         <!--<h2>TGSWRDC MBNR at a Glance</h2>
         <div class="video-section">
@@ -4031,6 +4031,7 @@ showSection('home');*/
 
 </body>
 </html>
+
 
 
 
