--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@ h2 {
 .slider {
     position: relative;
     width: 100%;
-    max-width: 100%;
     height: 450px;
     overflow: hidden;
 }
@@ -258,11 +257,39 @@ h2 {
     bottom: 0;
     width: 100%;
     padding: 12px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0,0,0,0.6);
     color: #fff;
     text-align: center;
     font-size: 18px;
 }
+
+/* Arrows */
+.arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 40px;
+    color: white;
+    background: rgba(0,0,0,0.5);
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 50%;
+    user-select: none;
+    transition: 0.3s;
+}
+
+.arrow:hover {
+    background: rgba(0,0,0,0.8);
+}
+
+.left {
+    left: 15px;
+}
+
+.right {
+    right: 15px;
+}
+
 /* ===== DOTS ===== */
 
 .dots {
@@ -1880,7 +1907,7 @@ html, body {
 <script>
 	document.addEventListener("DOMContentLoaded", function() {
     showSection('home');
-		 showSlides();
+		/* showSlides();*/
 });
 function generateStaffCards() {
     const staff = [
@@ -2166,7 +2193,8 @@ function showSection(section) {
                 <div class="caption">Yoga</div>
             </div>
             </div>
-			<div class="dots"></div>
+			  <span class="arrow left">&#10094;</span>
+        <span class="arrow right">&#10095;</span>
  </div>
 
         <!--<h2>TGSWRDC MBNR at a Glance</h2>
@@ -3986,6 +4014,8 @@ document.addEventListener("DOMContentLoaded", function () {
 
     let currentSlide = 0;
     const slides = document.querySelectorAll(".slide");
+    const nextBtn = document.querySelector(".right");
+    const prevBtn = document.querySelector(".left");
 
     function showSlide(index) {
         slides.forEach(slide => slide.classList.remove("active"));
@@ -4000,7 +4030,19 @@ document.addEventListener("DOMContentLoaded", function () {
         showSlide(currentSlide);
     }
 
-    // Start auto slider
+    function prevSlide() {
+        currentSlide--;
+        if (currentSlide < 0) {
+            currentSlide = slides.length - 1;
+        }
+        showSlide(currentSlide);
+    }
+
+    // Arrow Click Events
+    nextBtn.addEventListener("click", nextSlide);
+    prevBtn.addEventListener("click", prevSlide);
+
+    // Auto Slide
     setInterval(nextSlide, 3000);
 
 });
@@ -4031,6 +4073,7 @@ showSection('home');*/
 
 </body>
 </html>
+
 
 
 
