--- a/index.html
+++ b/index.html
@@ -224,13 +224,14 @@ h2 {
 }
 
 /* ================= SLIDER ================= */
-/* ===== SLIDER ===== */
-
 .slider {
     position: relative;
     width: 100%;
-    height: 450px;
+    max-width: 900px;
+    height: 340px;
+    margin: 20px auto;
     overflow: hidden;
+    border-radius: 10px;
 }
 
 .slide {
@@ -251,69 +252,16 @@ h2 {
     object-fit: cover;
 }
 
-/* Caption */
+/* CAPTION */
 .caption {
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding: 12px;
     background: rgba(0,0,0,0.6);
-    color: #fff;
-    text-align: center;
-    font-size: 18px;
-}
-
-/* Arrows */
-.arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 40px;
     color: white;
-    background: rgba(0,0,0,0.5);
-    padding: 10px 15px;
-    cursor: pointer;
-    border-radius: 50%;
-    user-select: none;
-    transition: 0.3s;
-}
-
-.arrow:hover {
-    background: rgba(0,0,0,0.8);
-}
-
-.left {
-    left: 15px;
-}
-
-.right {
-    right: 15px;
-}
-
-/* ===== DOTS ===== */
-
-.dots {
-    position: absolute;
-    bottom: 15px;
-    width: 100%;
+    padding: 10px;
     text-align: center;
-}
-
-.dots span {
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    margin: 5px;
-    background: white;
-    border-radius: 50%;
-    cursor: pointer;
-    opacity: 0.5;
-    transition: 0.3s;
-}
-
-.dots span.active-dot {
-    opacity: 1;
-    background: #ffcc00;
+    font-size: 16px;
 }
 
 /* ================= VIDEO ================= */
@@ -1907,7 +1855,7 @@ html, body {
 <script>
 	document.addEventListener("DOMContentLoaded", function() {
     showSection('home');
-		/* showSlides();*/
+		 showSlides();
 });
 function generateStaffCards() {
     const staff = [
@@ -2184,18 +2132,16 @@ function showSection(section) {
                 <img src="rep.jpeg">
                 <div class="caption">Padmavathi Participated in Republic Day Parade </div>
             </div>
-			<div class="slide">
+			<div class="slide active">
                 <img src="home.jpeg">
                 <div class="caption">Quiz First prize at BRR college</div>
             </div>
-				<div class="slide">
+				<div class="slide active">
                 <img src="images/yoga.png">
                 <div class="caption">Yoga</div>
             </div>
             </div>
-			  <span class="arrow left">&#10094;</span>
-        <span class="arrow right">&#10095;</span>
- </div>
+        </div>
 
         <!--<h2>TGSWRDC MBNR at a Glance</h2>
         <div class="video-section">
@@ -2305,10 +2251,10 @@ function showSection(section) {
 </section>
         `;
 
-    /* document.addEventListener("DOMContentLoaded", function () {
+     document.addEventListener("DOMContentLoaded", function () {
     showSection('home');
-    startSlider();
-});*/
+  
+});
 
     }
 /*else if (section === "StudentAmenities") {
@@ -4010,82 +3956,26 @@ else {
 }
 
 }
-document.addEventListener("DOMContentLoaded", function () {
 
-    let currentSlide = 0;
-    const slides = document.querySelectorAll(".slide");
-    const nextBtn = document.querySelector(".right");
-    const prevBtn = document.querySelector(".left");
-
-    function showSlide(index) {
-        slides.forEach(slide => slide.classList.remove("active"));
-        slides[index].classList.add("active");
-    }
-
-    function nextSlide() {
-        currentSlide++;
-        if (currentSlide >= slides.length) {
-            currentSlide = 0;
-        }
-        showSlide(currentSlide);
-    }
-
-    function prevSlide() {
-        currentSlide--;
-        if (currentSlide < 0) {
-            currentSlide = slides.length - 1;
-        }
-        showSlide(currentSlide);
-    }
-
-    // Arrow Click Events
-    nextBtn.addEventListener("click", nextSlide);
-    prevBtn.addEventListener("click", prevSlide);
-
-    // Auto Slide
-    setInterval(nextSlide, 3000);
-
-});
-/* AUTO SLIDER 
+/* AUTO SLIDER */
 let slideIndex = 0;
-let sliderInterval;
-
 function startSlider() {
     const slides = document.querySelectorAll(".slide");
     if (!slides.length) return;
 
-    sliderInterval = setInterval(() => {
-        slides.forEach(slide => slide.classList.remove("active"));
+    slides.forEach(slide => slide.classList.remove("active"));
+    slideIndex = (slideIndex + 1) % slides.length;
+    slides[slideIndex].classList.add("active");
 
-        slideIndex++;
-        if (slideIndex >= slides.length) {
-            slideIndex = 0;
-        }
-
-        slides[slideIndex].classList.add("active");
-    }, 3000);
+    setTimeout(startSlider, 2000);
 }
 
-
-showSection('home');*/
+showSection('home');
 
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
