--- a/index.html
+++ b/index.html
@@ -1850,6 +1850,69 @@ img {
 html, body {
     overflow-x: hidden;
 }
+/* COLLEGE AUTOSLIDER - HOME SECTION ONLY */
+.home-section {
+    padding: 40px 20px;
+    position: relative;
+}
+
+.college-slider {
+    width: 100%;
+    max-width: 900px;
+    height: 350px;
+    margin: 0 auto;
+    overflow: hidden;
+    border-radius: 15px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+}
+
+.slide-track {
+    display: flex;
+    animation: scroll 28s linear infinite;
+    width: max-content;
+}
+
+.college-slider:hover .slide-track {
+    animation-play-state: paused;
+}
+
+.slide {
+    min-width: 25%;
+    height: 350px;
+    position: relative;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slide-caption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.85);
+    color: white;
+    padding: 20px 15px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+}
+
+/* AUTO SCROLL ANIMATION */
+@keyframes scroll {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(calc(-25% * 4)); }
+}
+
+/* MOBILE */
+@media (max-width: 768px) {
+    .college-slider, .slide { height: 250px; }
+    .slide-caption { font-size: 16px; padding: 15px 10px; }
+}
 
 </style>
 <script>
@@ -2114,34 +2177,49 @@ function showSection(section) {
     </div>
 
     
- <div class="slider">
-            <div class="slide active">
-                <img src="i1.png">
-                <div class="caption">College Campus View</div>
-            </div>
-			 <div class="slide">
-                <img src="h4.jpeg">
-                <div class="caption">P. Himabindu Receiving Gold Medal</div>
-            </div>
-         
+ <section id="home" class="home-section">
+    <div class="college-slider">
+        <div class="slide-track">
+            <!-- Image 1 -->
             <div class="slide">
-                <img src="h6.jpeg">
-                <div class="caption">Gold Medal at Shooting Ball Nationals </div>
+                <img src="i1.png" alt="Campus">
+                <div class="slide-caption">College Campus View</div>
             </div>
-             <div class="slide">
-                <img src="rep.jpeg">
-                <div class="caption">Padmavathi Participated in Republic Day Parade </div>
+            <!-- Image 2 -->
+            <div class="slide">
+                <img src="h4.jpeg" alt="Gold Medal">
+                <div class="slide-caption">P. Himabindu Gold Medal</div>
             </div>
-			<div class="slide">
-                <img src="home.jpeg">
-                <div class="caption">Quiz First prize at BRR college</div>
+            <!-- Image 3 -->
+            <div class="slide">
+                <img src="h6.jpeg" alt="Shooting">
+                <div class="slide-caption">Shooting Ball Nationals</div>
             </div>
-				<div class="slide">
-                <img src="images/yoga.png">
-                <div class="caption">Yoga</div>
+            <!-- Image 4 -->
+            <div class="slide">
+                <img src="rep.jpeg" alt="Republic Day">
+                <div class="slide-caption">Republic Day Parade</div>
             </div>
+            <!-- DUPLICATE for seamless loop -->
+            <div class="slide">
+                <img src="i1.png" alt="Campus">
+                <div class="slide-caption">College Campus View</div>
+            </div>
+            <div class="slide">
+                <img src="h4.jpeg" alt="Gold Medal">
+                <div class="slide-caption">P. Himabindu Gold Medal</div>
+            </div>
+            <div class="slide">
+                <img src="h6.jpeg" alt="Shooting">
+                <div class="slide-caption">Shooting Ball Nationals</div>
+            </div>
+            <div class="slide">
+                <img src="rep.jpeg" alt="Republic Day">
+                <div class="slide-caption">Republic Day Parade</div>
             </div>
         </div>
+    </div>
+</section>
 
         <!--<h2>TGSWRDC MBNR at a Glance</h2>
         <div class="video-section">
@@ -4005,6 +4083,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
