--- a/index.html
+++ b/index.html
@@ -1855,7 +1855,7 @@ html, body {
 <script>
 	document.addEventListener("DOMContentLoaded", function() {
     showSection('home');
-		 showSlides();
+		
 });
 function generateStaffCards() {
     const staff = [
@@ -2253,6 +2253,7 @@ function showSection(section) {
 
      document.addEventListener("DOMContentLoaded", function () {
     showSection('home');
+	setTimeout(showSlides, 100);
   
 });
 
@@ -3959,23 +3960,28 @@ else {
 
 /* AUTO SLIDER */
 let slideIndex = 0;
-function startSlider() {
+
+function showSlides() {
     const slides = document.querySelectorAll(".slide");
-    if (!slides.length) return;
 
     slides.forEach(slide => slide.classList.remove("active"));
-    slideIndex = (slideIndex + 1) % slides.length;
-    slides[slideIndex].classList.add("active");
 
-    setTimeout(startSlider, 2000);
+    slideIndex++;
+
+    if (slideIndex > slides.length) {
+        slideIndex = 1;
+    }
+
+    slides[slideIndex - 1].classList.add("active");
+
+    setTimeout(showSlides, 3000); // Change slide every 3 seconds
 }
-
-showSection('home');
 
 </script>
 
 </body>
 </html>
+
 
 
 
