--- a/index.html
+++ b/index.html
@@ -2253,7 +2253,9 @@ function showSection(section) {
 
      document.addEventListener("DOMContentLoaded", function () {
     showSection('home');
-	setTimeout(showSlides, 100);
+	setTimeout(function() {
+    startSlider();
+}, 100);
   
 });
 
@@ -3960,11 +3962,14 @@ else {
 
 /* AUTO SLIDER */
 let slideIndex = 0;
+let sliderInterval;
 
-function showSlides() {
+function startSlider() {
     const slides = document.querySelectorAll(".slide");
 
-    slides.forEach(slide => slide.classList.remove("active"));
+    if (slides.length === 0) return;
+
+    slides.forEach(slide => slide.style.display = "none");
 
     slideIndex++;
 
@@ -3972,15 +3977,16 @@ function showSlides() {
         slideIndex = 1;
     }
 
-    slides[slideIndex - 1].classList.add("active");
+    slides[slideIndex - 1].style.display = "block";
 
-    setTimeout(showSlides, 3000); // Change slide every 3 seconds
+    sliderInterval = setTimeout(startSlider, 3000);
 }
 
 </script>
 
 </body>
 </html>
+
 
 
 
