--- a/index.html
+++ b/index.html
@@ -2259,9 +2259,8 @@ function showSection(section) {
 
      document.addEventListener("DOMContentLoaded", function () {
     showSection('home');
-	setTimeout(function() {
-    startSlider();
-}, 100);
+	setTimeout(startSlider, 200);
+
   
 });
 
@@ -3992,6 +3991,7 @@ function startSlider() {
 
 </body>
 </html>
+
 
 
 
