--- a/index.html
+++ b/index.html
@@ -239,11 +239,12 @@ h2 {
     width: 100%;
     height: 100%;
     opacity: 0;
+	display: none
     transition: opacity 1s ease-in-out;
 }
 
 .slide.active {
-    opacity: 1;
+  	display: block
 }
 
 .slide img {
@@ -3966,31 +3967,30 @@ else {
 }
 
 /* AUTO SLIDER */
-let slideIndex = 0;
-let sliderInterval;
-
-function startSlider() {
+document.addEventListener("DOMContentLoaded", function () {
     const slides = document.querySelectorAll(".slide");
+    let currentIndex = 0;
 
-    if (slides.length === 0) return;
+    function showNextSlide() {
+        // Remove active from current slide
+        slides[currentIndex].classList.remove("active");
 
-    slides.forEach(slide => slide.style.display = "none");
+        // Move to next index
+        currentIndex = (currentIndex + 1) % slides.length;
 
-    slideIndex++;
-
-    if (slideIndex > slides.length) {
-        slideIndex = 1;
+        // Add active to new slide
+        slides[currentIndex].classList.add("active");
     }
 
-    slides[slideIndex - 1].style.display = "block";
-
-    sliderInterval = setTimeout(startSlider, 3000);
-}
+    // Change slide every 3 seconds
+    setInterval(showNextSlide, 3000);
+});
 
 </script>
 
 </body>
 </html>
+
 
 
 
