--- a/index.html
+++ b/index.html
@@ -2260,7 +2260,7 @@ function showSection(section) {
 
      document.addEventListener("DOMContentLoaded", function () {
     showSection('home');
-	setTimeout(startSlider, 200);
+	setTimeout(showNextSlide, 200);
 
   
 });
@@ -3990,6 +3990,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
