--- a/index.html
+++ b/index.html
@@ -227,23 +227,15 @@ h2 {
 .slider {
     position: relative;
     width: 100%;
-    max-width: 900px;
-    height: 340px;
-    margin: 20px auto;
+    height: 400px;
     overflow: hidden;
-    border-radius: 10px;
 }
 
 .slide {
     position: absolute;
     width: 100%;
     height: 100%;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-}
-
-.slide.active {
-    opacity: 1;
+    display: none;
 }
 
 .slide img {
@@ -252,6 +244,9 @@ h2 {
     object-fit: cover;
 }
 
+.slide.active {
+    display: block;
+}
 /* CAPTION */
 .caption {
     position: absolute;
@@ -2141,7 +2136,7 @@ function showSection(section) {
                 <div class="caption">Yoga</div>
             </div>
             </div>
-        </div>
+
 
         <!--<h2>TGSWRDC MBNR at a Glance</h2>
         <div class="video-section">
@@ -3958,7 +3953,7 @@ else {
 }
 
 /* AUTO SLIDER */
-let slideIndex = 0;
+/*let slideIndex = 0;
 function startSlider() {
     const slides = document.querySelectorAll(".slide");
     if (!slides.length) return;
@@ -3968,14 +3963,26 @@ function startSlider() {
     slides[slideIndex].classList.add("active");
 
     setTimeout(startSlider, 2000);
-}
+}*/
+document.addEventListener("DOMContentLoaded", function () {
+    const slides = document.querySelectorAll(".slide");
+    let current = 0;
 
+    function startSlider() {
+        slides[current].classList.remove("active");
+        current = (current + 1) % slides.length;
+        slides[current].classList.add("active");
+    }
+
+    setInterval(startSlider, 3000); // Change every 3 seconds
+});
 showSection('home');
 
 </script>
 
 </body>
 </html>
+
 
 
 
