--- a/index.html
+++ b/index.html
@@ -227,15 +227,23 @@ h2 {
 .slider {
     position: relative;
     width: 100%;
-    height: 400px;
+    max-width: 900px;
+    height: 340px;
+    margin: 20px auto;
     overflow: hidden;
+    border-radius: 10px;
 }
 
 .slide {
     position: absolute;
     width: 100%;
     height: 100%;
-    display: none;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.slide.active {
+    opacity: 1;
 }
 
 .slide img {
@@ -244,9 +252,6 @@ h2 {
     object-fit: cover;
 }
 
-.slide.active {
-    display: block;
-}
 /* CAPTION */
 .caption {
     position: absolute;
@@ -2136,7 +2141,7 @@ function showSection(section) {
                 <div class="caption">Yoga</div>
             </div>
             </div>
-
+        </div>
 
         <!--<h2>TGSWRDC MBNR at a Glance</h2>
         <div class="video-section">
@@ -3953,7 +3958,7 @@ else {
 }
 
 /* AUTO SLIDER */
-/*let slideIndex = 0;
+let slideIndex = 0;
 function startSlider() {
     const slides = document.querySelectorAll(".slide");
     if (!slides.length) return;
@@ -3963,33 +3968,14 @@ function startSlider() {
     slides[slideIndex].classList.add("active");
 
     setTimeout(startSlider, 2000);
-}*/
-let slideIndex = 0;
-
-function showSlides() {
-    const slides = document.querySelectorAll(".slide");
-
-    slides.forEach(slide => slide.classList.remove("active"));
-
-    slideIndex++;
-    if (slideIndex > slides.length) {
-        slideIndex = 1;
-    }
-
-    slides[slideIndex - 1].classList.add("active");
-
-    setTimeout(showSlides, 3000);
 }
 
-document.addEventListener("DOMContentLoaded", showSlides);
 showSection('home');
 
 </script>
 
 </body>
 </html>
-
-
 
 
 
