--- a/index.html
+++ b/index.html
@@ -3959,23 +3959,32 @@ else {
 
 /* AUTO SLIDER */
 let slideIndex = 0;
-function startSlider() {
-    const slides = document.querySelectorAll(".slide");
-    if (!slides.length) return;
 
-    slides.forEach(slide => slide.classList.remove("active"));
-    slideIndex = (slideIndex + 1) % slides.length;
-    slides[slideIndex].classList.add("active");
+document.addEventListener('DOMContentLoaded', function () {
+    showSlides();
+});
 
-    setTimeout(startSlider, 2000);
+function showSlides() {
+    const slides = document.querySelectorAll('.slide');
+
+    slides.forEach(slide => slide.classList.remove('active'));
+
+    slideIndex++;
+    if (slideIndex > slides.length) {
+        slideIndex = 1;
+    }
+
+    slides[slideIndex - 1].classList.add('active');
+
+    setTimeout(showSlides, 4000);
 }
-
 showSection('home');
 
 </script>
 
 </body>
 </html>
+
 
 
 
