--- a/index.html
+++ b/index.html
@@ -223,46 +223,7 @@ h2 {
     padding-bottom: 5px;
 }
 
-/* ================= SLIDER ================= */
-.slider {
-    position: relative;
-    width: 100%;
-    max-width: 900px;
-    height: 340px;
-    margin: 20px auto;
-    overflow: hidden;
-    border-radius: 10px;
-}
 
-.slide {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-}
-
-.slide.active {
-    opacity: 1;
-}
-
-.slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-/* CAPTION */
-.caption {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background: rgba(0,0,0,0.6);
-    color: white;
-    padding: 10px;
-    text-align: center;
-    font-size: 16px;
-}
 
 /* ================= VIDEO ================= */
 .video-section {
@@ -1855,7 +1816,7 @@ html, body {
 <script>
 	document.addEventListener("DOMContentLoaded", function() {
     showSection('home');
-		// showSlides();
+		
 });
 function generateStaffCards() {
     const staff = [
@@ -2069,9 +2030,9 @@ function showAdmissionNotification() {
 
 <script>
 
-/*document.getElementById("mobile-menu").addEventListener("click", function() {
+document.getElementById("mobile-menu").addEventListener("click", function() {
     document.querySelector(".nav-list").classList.toggle("active");
-});*/
+});
 
 function showSection(section) {
     const content = document.getElementById("content");
@@ -3957,36 +3918,12 @@ else {
 
 }
 
-/* AUTO SLIDER */
-let slideIndex = 0;
-
-document.addEventListener('DOMContentLoaded', function () {
-    showSlides();
-});
-
-function showSlides() {
-	let slideIndex = 0;
-    const slides = document.querySelectorAll('.slide');
-
-    slides.forEach(slide => slide.classList.remove('active'));
-
-    slideIndex++;
-    if (slideIndex > slides.length) {
-        slideIndex = 1;
-    }
-
-    slides[slideIndex - 1].classList.add('active');
-
-    setTimeout(showSlides, 4000);
-}
 showSection('home');
 
 </script>
 
 </body>
 </html>
-
-
 
 
 
