--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>TGSWRDCW Mahabubnagar</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <style>
 body {
     margin: 0;
@@ -2075,34 +2077,13 @@ function showSection(section) {
     </div>
 
     
- <div class="slider">
-            <div class="slide active">
-                <img src="i1.png">
-                <div class="caption">College Campus View</div>
-            </div>
-			 <div class="slide">
-                <img src="h4.jpeg">
-                <div class="caption">P. Himabindu Receiving Gold Medal</div>
-            </div>
-         
-            <div class="slide">
-                <img src="h6.jpeg">
-                <div class="caption">Gold Medal at Shooting Ball Nationals </div>
-            </div>
-             <div class="slide">
-                <img src="rep.jpeg">
-                <div class="caption">Padmavathi Participated in Republic Day Parade </div>
-            </div>
-			<div class="slide">
-                <img src="home.jpeg">
-                <div class="caption">Quiz First prize at BRR college</div>
-            </div>
-				<div class="slide">
-                <img src="images/yoga.png">
-                <div class="caption">Yoga</div>
-            </div>
-            </div>
-        </div>
+<div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active"><img src="i1.jpg" class="d-block w-100"></div>
+    <div class="carousel-item"><img src="h4.jpeg" class="d-block w-100"></div>
+    <div class="carousel-item"><img src="h6.jpeg" class="d-block w-100"></div>
+  </div>
+</div>
 
         <!--<h2>TGSWRDC MBNR at a Glance</h2>
         <div class="video-section">
@@ -3924,6 +3905,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
