--- a/index.html
+++ b/index.html
@@ -2079,9 +2079,12 @@ function showSection(section) {
     
 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img src="i1.jpg" class="d-block w-100"></div>
+    <div class="carousel-item active"><img src="i1.png" class="d-block w-100"></div>
     <div class="carousel-item"><img src="h4.jpeg" class="d-block w-100"></div>
     <div class="carousel-item"><img src="h6.jpeg" class="d-block w-100"></div>
+	 <div class="carousel-item"><img src="rep.jpeg" class="d-block w-100"></div>
+	  <div class="carousel-item"><img src="home.jpeg" class="d-block w-100"></div>
+	   <div class="carousel-item"><img src="images/yoga.png" class="d-block w-100"></div>
   </div>
 </div>
 
@@ -3905,6 +3908,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
