--- a/index.html
+++ b/index.html
@@ -2080,11 +2080,31 @@ function showSection(section) {
 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active"><img src="i1.png" class="d-block w-100"></div>
-    <div class="carousel-item"><img src="h4.jpeg" class="d-block w-100"></div>
-    <div class="carousel-item"><img src="h6.jpeg" class="d-block w-100"></div>
-	 <div class="carousel-item"><img src="rep.jpeg" class="d-block w-100"></div>
-	  <div class="carousel-item"><img src="home.jpeg" class="d-block w-100"></div>
-	   <div class="carousel-item"><img src="images/yoga.png" class="d-block w-100"></div>
+
+	
+    <div class="carousel-item"><img src="h4.jpeg" class="d-block w-100">	<div class="carousel-caption">
+        <h4>P. Himabindu Receiving Gold Medal</h4>
+	</div></div>
+    <div class="carousel-item"><img src="h6.jpeg" class="d-block w-100"> 
+		<div class="carousel-caption">
+        <h4>Gold Medal at Shooting Ball Nationals</h4>
+	</div>
+	</div>
+	 <div class="carousel-item"><img src="rep.jpeg" class="d-block w-100">
+	 <div class="carousel-caption">
+        <h4>	 Padmavathi Participated in Republic Day Parade</h4>
+	</div>
+	 </div>
+	  <div class="carousel-item"><img src="home.jpeg" class="d-block w-100">
+	   <div class="carousel-caption">
+        <h4>	Quiz First prize at BRR college</h4>
+	</div>
+	  </div>
+	   <div class="carousel-item"><img src="images/yoga.png" class="d-block w-100">
+	    <div class="carousel-caption">
+        <h4>Republic day</h4>
+	</div>
+	   </div>
   </div>
 </div>
 
@@ -3908,6 +3928,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
