--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 /* ================= HEADER ================= */
 header {
     background: white;
-    color: black;
+    color: white;
     padding: 15px 30px;
 }
 
@@ -3931,6 +3931,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
