--- a/index.html
+++ b/index.html
@@ -2068,7 +2068,7 @@ function showSection(section) {
         <h4>	Quiz First prize at BRR college</h4>
 	</div>
 	  </div>
-	   <div class="carousel-item"><img src="images/yoga.jpeg" class="d-block w-100">
+	   <div class="carousel-item"><img src="yoga.jpeg" class="d-block w-100">
 	    <div class="carousel-caption">
         <h4>Republic day</h4>
 	</div>
@@ -3896,6 +3896,7 @@ showSection('home');
 
 </body>
 </html>
+
 
 
 
